<resources>
    <string name="app_name">HeyatoShohada</string>
    <string name="title_home">خانه</string>
    <string name="title_search">جست و جو</string>
    <string name="title_send">ارسال محتوا</string>
    <string name="title_notification">رویدادها</string>
    <string name="title_profile">پروفایل</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="splash_text">مشکل کارهای ما اینه که برای رضای همه کار میکنیم به جز خدا</string>
    <string name="todo">todo</string>
    <string name="under_maintenance">این بخش درحال آماده سازی میباشد</string>
    <string name="name">نام و نام خانوادگی</string>
    <string name="phone">شماره موبایل</string>
    <string name="login">ثبت نام/ورود</string>
    <string name="setting">تنظیمات</string>
    <string name="account">حساب کاربری</string>
    <string name="logout">خروج</string>
    <string name="edit">ویرایش</string>
    <string name="media">رسانه ها</string>
    <string name="call">تماس با ما</string>
    <string name="about">درباره ما</string>
</resources>
