<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.profile.setting.SettingFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_header_fragment_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/setting"
                android:textColor="@color/page_title_color"
                android:textSize="@dimen/page_title_size"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/iv_back_fragment_setting"
                android:layout_width="@dimen/back_width"
                android:layout_height="@dimen/back_height"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/todo"
                android:padding="@dimen/back_padding"
                android:src="@drawable/back_drawable"
                android:tint="@color/page_title_color" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_account_fragment_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingTop="20dp"
        android:paddingEnd="25dp"
        android:paddingBottom="20dp"
        android:text="@string/account"
        android:textColor="@color/title_color"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:alpha="0.3"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/tv_media_fragment_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingTop="20dp"
        android:paddingEnd="25dp"
        android:paddingBottom="20dp"
        android:text="@string/media"
        android:textColor="@color/title_color"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:alpha="0.3"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/tv_call_fragment_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingTop="20dp"
        android:paddingEnd="25dp"
        android:paddingBottom="20dp"
        android:text="@string/call"
        android:textColor="@color/title_color"
        android:textSize="15sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:alpha="0.3"
        android:background="@color/divider" />

    <TextView
        android:id="@+id/tv_about_fragment_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="25dp"
        android:paddingTop="20dp"
        android:paddingEnd="25dp"
        android:paddingBottom="20dp"
        android:text="@string/about"
        android:textColor="@color/title_color"
        android:textSize="15sp" />

</LinearLayout>