<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.main.profile.setting.MediaFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_header_fragment_setting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/media"
                android:textColor="@color/page_title_color"
                android:textSize="@dimen/page_title_size"
                android:textStyle="bold"
                tools:ignore="RelativeOverlap" />

            <ImageView
                android:id="@+id/iv_back_fragment_setting"
                android:layout_width="@dimen/back_width"
                android:layout_height="@dimen/back_height"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/todo"
                android:padding="@dimen/back_padding"
                android:src="@drawable/back_drawable"
                android:tint="@color/page_title_color" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/iv_under_maintenance_home"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_centerInParent="true"
            android:contentDescription="@string/todo"
            android:paddingBottom="100dp"
            android:src="@drawable/under_maintenance" />

        <TextView
            android:id="@+id/tv_under_maintenance_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/iv_under_maintenance_home"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="-50dp"
            android:text="@string/under_maintenance"
            android:textSize="20sp" />

    </RelativeLayout>

</LinearLayout>